# G4_custom_matscan

./: .gitignore  CMakeLists.txt  README  SecondaryCounterActions.hh  SecondaryCounterPerMaterialActions.hh  compare_secondaries_permaterial.cxx  g01.in  gdml_silentsim.cc  geo.txt  gun.mac  gun_fulldet.mac  gun_tb.mac  hgcal_geo_ascii.txt  hgcal_sim.cc  load_gdml.cc  material_cut_mm.txt  run.sh  run_parallel.sh  runbenchmark.sh  runprofile.sh  runprofile2.sh  runtest.sh  vis.mac
CMSSW_scripts/: Materials_Run4D121.txt  g4DumpGeometry_cfg.py  g4region.txt
hgcal_lv_madeof/: hgcal_lv_madeof_Air.txt  hgcal_lv_madeof_Aluminium.txt  hgcal_lv_madeof_Copper.txt  hgcal_lv_madeof_Epoxy.txt  hgcal_lv_madeof_Galactic.txt  hgcal_lv_madeof_HGC_Cables.txt  hgcal_lv_madeof_HGC_EEConnector.txt  hgcal_lv_madeof_HGC_G10-FR4.txt  hgcal_lv_madeof_HGC_HEConnector.txt  hgcal_lv_madeof_H_Scintillator.txt  hgcal_lv_madeof_Kapton.txt  hgcal_lv_madeof_Lead.txt  hgcal_lv_madeof_Polystyrene.txt  hgcal_lv_madeof_Silicon.txt  hgcal_lv_madeof_StainlessSteel.txt  hgcal_lv_madeof_WCu.txt  logical_volumes_por_material.txt
hgcal_rnd_matscan/: .~lock.hgcal_info_phi6theta27.txt#  hgcal_info_phi11theta90.txt  hgcal_info_phi16theta45.txt  hgcal_info_phi20theta34.txt  hgcal_info_phi22theta90.txt  hgcal_info_phi24theta26.txt  hgcal_info_phi6theta27.txt  hgcal_info_phi6theta90.txt
include/: AveragedHistogram.hh  AveragedHistogramCollection.hh  G01DetectorConstruction.hh  HistogramCollection.hh  MyPrimaryGenerator.hh  MyWatch.hh  YourActionInitialization.hh  YourDetectorConstructor.hh  YourEventAction.hh  YourRun.hh  YourRunAction.hh  YourSteppingAction.hh
src/: AveragedHistogramCollection.cc  G01PrimaryGeneratorAction.cc  HistogramCollection.cc  YourActionInitialization.cc  YourEventAction.cc  YourRun.cc  YourRunAction.cc  YourSteppingAction.cc
